--- a/styles.css
+++ b/styles.css
@@ -122,7 +122,7 @@ section{
 
 .vid-bg{
     bottom: 0; right: 0rem;
-    opacity: 0.5;
+    opacity: 0.3;
     clip-path: polygon(0% 100%, 100% 100%, 100% 43.5%, 0% 43.5%);
     position: fixed;
     width: 100%;
@@ -221,7 +221,7 @@ section{
   }
 
 .home{
-    height: 100vh;
+    height: 110vh;
     padding:7rem 2rem;
     display: flex;
     align-items: center;
@@ -230,10 +230,10 @@ section{
     
 }
 
-.home .content{
+.content{
     width: 75rem;
     text-align: center;
-    z-index: 99999999;
+    z-index: 0;
 }
 .jkl{
     width: 100% ;
@@ -250,7 +250,7 @@ section{
     /* z-index: -9999; */
 
 }
-.home .content h3{
+.content h3{
     color: var(--white);
     text-transform: uppercase;
     font-size: 4rem;
@@ -258,7 +258,7 @@ section{
     text-shadow: 0 .5rem 1rem rgba(0,0,0,.1);
 }
 
-.home .content p{
+.content p{
     font-weight: 300;
     color: var(--white);
     font-size: 2rem;
