--- a/styles.css
+++ b/styles.css
@@ -71,8 +71,8 @@ section{
     margin-top: 1rem;
     display: inline-block;
     transition: .2s linear;
-    background:var(--white);
-    color:var(--black);
+    background:white;
+    color:black;
     border-radius: .5rem;
     box-shadow: var(--box-shadow);
     padding:.8rem 3rem;
@@ -121,9 +121,9 @@ section{
 }
 
 .vid-bg{
-    bottom: 0; right: 0rem;
+    top: 12.5rem; right: 0rem;
     opacity: 0.3;
-    clip-path: polygon(0% 100%, 100% 100%, 100% 43.5%, 0% 43.5%);
+    /* clip-path: polygon(0% 100%, 100% 100%, 100% 43.5%, 0% 43.5%); */
     position: fixed;
     width: 100%;
     /* height: 95%; */
@@ -147,7 +147,7 @@ section{
     box-shadow: var(--box-shadow);
     padding:2rem;
     border-radius: .5rem;
-    backdrop-filter: blur(.4rem);
+    backdrop-filter: blur(.6rem);
 }
 
 .header .logo{
@@ -219,6 +219,21 @@ section{
 ::-ms-input-placeholder { /* Microsoft Edge */
     color: rgba(255, 255, 255, 0.868);
   }
+
+.nav-btn{
+    vertical-align: middle;
+    /* color: black; */
+    border-radius: 1rem;
+}
+
+.nav-btn img{
+    width: 5rem;
+    padding: 0rem 1rem;
+}
+
+.nav-btn :hover{
+    background-color: rgb(37, 124, 111);
+}
 
 .home{
     height: 110vh;
