--- a/style2.css
+++ b/style2.css
@@ -1,48 +1,108 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;600&display=swap');
+
 *{
     margin: 0;
     padding: 0;
     text-decoration: none;
     list-style: none;
     box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+    /* background-color: aqua; */
+}
+
+:root{
+    background: linear-gradient(rgb(37, 124, 111), rgb(0, 0, 0)) no-repeat;
+    height: 100%;
 }
 
 .form{
     position: relative;
-    top: 10rem;
+    top: 7rem;
     width: 100%;
+    min-height: 40vh;
     display: flex;
     flex-direction: row;
+    justify-content: center;
     gap: 10vw;
     
 }
 
 form{
-    /* transform: translateX(-50%); */
-    /* left: 10%; */
-    width: 30%;
+    /* position: absolute; */
+    width: 25%;
     /* gap: 3vw; */
     /* margin: auto; */
     display: flex;
     align-items: center;
     flex-direction: column;
     justify-content: center;
-    border: 1px solid;
+    border: 2px solid white;
+    border-radius: 1rem;
+    background-color: rgb(117, 117, 117);
+    height: fit-content;
+    box-shadow: 3px 3px 50px 5px rgb(88, 158, 139);
 }
 
 form label{
     font-size: 30px;
     margin: 3rem;
+    color: white;
+    text-shadow: 2px 2px 15px black;
 }
 
 form input{
     padding: 0.5rem;
+    border: 1px, solid;
+    border-radius: 0.3rem;
+    color: white;
+    background-color: rgb(36, 60, 65);
+    font-size: 15px;
     width: 90%;
     height: 2rem;
     margin: 1rem;
 }
 
+::placeholder {
+    color: rgb(255, 255, 255, 0.5);
+    /* opacity: 1; */
+}
+
+::-ms-input-placeholder {
+    color: rgb(255, 255, 255, 0.5);
+}
+
 form button{
-    width: 90%;
+    border-radius: 0.3rem;
+    border: none;
+    font-size: 18px;
+    font-weight: 600;
+    background-color: rgb(218, 218, 218);
+    box-shadow: 3px 3px 20px rgb(83, 83, 83);
+    color: rgb(42, 42, 42);
+    width: 50%;
     height: 2rem;
     margin: 1rem;
+}
+
+::-webkit-datetime-edit-fields-wrapper {
+    color: rgb(255, 255, 255, 0.6);
+ }
+
+ ::-webkit-calendar-picker-indicator {
+    filter: invert(70%);
+}
+
+.seller{
+    display: none;
+}
+
+.switch{
+    font-size: 13px;
+    padding: 0;
+    height: fit-content;
+    background: none;
+    box-shadow: none;
+    text-decoration: underline;
+    margin-bottom: 2rem;
+    cursor: pointer;
 }
