backend update and frontend minor changes

--- a/style2.css
+++ b/style2.css
@@ -11,7 +11,7 @@
 }
 
 :root{
-    background: linear-gradient(rgb(37, 124, 111), rgb(0, 0, 0)) no-repeat;
+    background: linear-gradient(rgb(157, 0, 188), rgb(0, 0, 0)) no-repeat;
     height: 100%;
 }
 
@@ -38,16 +38,16 @@ form{
     justify-content: center;
     border: 2px solid white;
     border-radius: 1rem;
-    background-color: rgb(117, 117, 117);
+    background-color: rgb(146, 146, 146, 0.5);
     height: fit-content;
-    box-shadow: 3px 3px 50px 5px rgb(88, 158, 139);
+    box-shadow: 3px 3px 30px 2px rgb(158, 158, 158);
 }
 
 form label{
     font-size: 30px;
     margin: 3rem;
     color: white;
-    text-shadow: 2px 2px 15px black;
+    text-shadow: 2px 2px 15px rgb(44, 44, 44);
 }
 
 form input{
@@ -79,6 +79,7 @@ form button{
     background-color: rgb(218, 218, 218);
     box-shadow: 3px 3px 20px rgb(83, 83, 83);
     color: rgb(42, 42, 42);
+    cursor: pointer;
     width: 50%;
     height: 2rem;
     margin: 1rem;
@@ -99,6 +100,7 @@ form button{
 .switch{
     font-size: 13px;
     padding: 0;
+    color: white;
     height: fit-content;
     background: none;
     box-shadow: none;
